@@ -1,3 +1,5 @@
+Lattice                 Lattice Graphics
+Rows                    Extract 'rows' from a list
 banking                 Banking
 barley                  Data Sets in the Lattice library
 cloud                   3d Scatter Plot
@@ -5,7 +7,6 @@ draw.colorkey           Produce a Colorkey for levelplot
 draw.key                Produce a Legend or Key
 equal.count             shingles
 histogram               Histograms and Kernel Density Plots
-Lattice                 Lattice Graphics
 lattice.options         Low-level Options Controlling Behaviour of
                         Lattice
 latticeParseFormula     Parse Trellis formula
@@ -39,7 +40,6 @@ qq                      Quantile-Quantile Plots of Two Samples
 qqmath                  Q-Q Plot with Theoretical Distribution
 reorderFactor           Reorder levels of a factor
 rfs                     Residual and Fit Spread Plots
-Rows                    Extract 'rows' from a list
 simpleKey               Function to generate a simple key
 splom                   Scatter Plot Matrices
 strip.default           In-built Trellis Strip Function
